# caspr

./: .gitignore  README.md  pyproject.toml
caspr/: __main__.py  app.py  audio.py  cleanup.py  config.py  context.py  dictionary.py  history.py  hotkey_service.py  hotkeys.py  inject.py  launcher.py  replacements.py  server.py  sounds.py  spellcheck.py  stt.py  stt_groq.py  stt_parakeet.py  timefmt.py
caspr/ui/: bridge.py  bridge_data.py  correct.py  history_view.py  hotkey_capture.py  icons.py  main_window.py  overlay.py  shell.py  style.py  tray.py
docs/superpowers/plans/: 2026-07-16-correction-learning.md  2026-07-18-velvet-webui.md  2026-07-19-multi-hotkey-clash-detection.md  2026-07-22-groq-stt-smartcancel-live-hotkeys.md
docs/superpowers/specs/: 2026-07-15-caspr-flow-design.md  2026-07-16-app-window-design.md  2026-07-16-correction-learning-design.md  2026-07-18-parakeet-engine-design.md  2026-07-18-premium-webui-design.md  2026-07-19-multi-hotkey-clash-detection-design.md  2026-07-22-ai-cleanup-tone-handsfree-design.md  2026-07-22-groq-stt-smartcancel-live-hotkeys-design.md
electron/: hotkeys.js  main.js  package-lock.json  package.json  preload.js  python.js  tray.js  ws-client.js
scripts/: e2e_paste_check.py  gen_icon.py  verify_cleanup.py
tests/: test_app_actions.py  test_app_cleanup.py  test_app_reload.py  test_audio_level.py  test_bridge_data.py  test_cleanup.py  test_config.py  test_context.py  test_dictionary.py  test_gestures.py  test_history.py  test_hotkey_service.py  test_hotkeys.py  test_learning.py  test_replacements.py  test_server.py  test_sounds.py  test_spellcheck.py  test_stt.py  test_stt_groq.py  test_stt_router.py  test_style.py  test_timefmt.py
webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  bridge.ts  index.css  qwebchannel.d.ts  state.tsx
webui/src/components/: Card.tsx  FlaggedText.tsx  ResizeEdges.tsx  Sidebar.tsx  TitleBar.tsx  Waveform.tsx
webui/src/lib/: reltime.ts
webui/src/pages/: Dictionary.tsx  History.tsx  Home.tsx  Settings.tsx
