[project]
name = "caspr-flow"
version = "0.1.0"
description = "Wispr Flow-style voice dictation for Windows: local Whisper + LLM cleanup + paste anywhere"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "faster-whisper>=1.1",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "keyboard>=0.13.5",
    "pywin32>=306",
    "wordfreq>=3",
    "onnx-asr[hub]>=0.12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
]

[project.scripts]
caspr = "caspr.__main__:main"

[project.gui-scripts]
caspr-app = "caspr.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caspr"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that download/load a Whisper model",
]

[tool.ruff]
line-length = 100
